<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/MyTextHeadStyle"
        android:text="@string/Head_text" />

    <androidx.appcompat.widget.LinearLayoutCompat

        style="@style/MyStyleLinearLayout">

        <androidx.appcompat.widget.LinearLayoutCompat

            style="@style/MyStyleInputLinearLayout">
            <Button
                android:text="1"
                style="@style/MyStyleButton" />
            <Button
                android:text="2"
                style="@style/MyStyleButton" />
            <Button
                android:text="3"
                style="@style/MyStyleButton" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat

            style="@style/MyStyleInputLinearLayout">
            <Button
                android:text="4"
                style="@style/MyStyleButton" />
            <Button
                android:text="5"
                style="@style/MyStyleButton" />
            <Button
                android:text="6"
                style="@style/MyStyleButton" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat

            style="@style/MyStyleInputLinearLayout">
            <Button
                android:text="7"
                style="@style/MyStyleButton" />
            <Button
                android:text="8"
                style="@style/MyStyleButton" />
            <Button
                android:text="9"
                style="@style/MyStyleButton" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        style="@style/MyTextBottomStyle"
        android:text="@string/Воttom_text" />


    <RadioGroup
        android:layout_width="150dp"
        android:layout_height="250dp">

        <RadioButton
            style="@style/My_RadioButton_Style"
            android:text="@string/label_1" />

        <RadioButton
            style="@style/My_RadioButton_Style"
            android:text="@string/label_2" />

        <RadioButton
            style="@style/My_RadioButton_Style"
            android:text="@string/label_3" />

        <RadioButton
            style="@style/My_RadioButton_Style"
            android:text="@string/label_4" />

        <RadioButton
            style="@style/My_RadioButton_Style"
            android:text="@string/label_5" />

    </RadioGroup>

</androidx.appcompat.widget.LinearLayoutCompat>